Resolves: tdf#154217 Edit date+time User Field and Set Variable

... instead of the raw numeric value.

Change-Id: I256cb4fde1e4ea6b0580b3208c5d4948e2573448
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150169
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins